--- a/views/components/Navbar.hbs
+++ b/views/components/Navbar.hbs
@@ -10,6 +10,9 @@
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/perfil">perfil</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/auth/login">Login</a>
         </li>
         <li class="nav-item">
