--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,23 +16,8 @@
         {{/each}}
         {{{body}}}
     </div>
- <script type="text/javascript">
-    console.log('hi from home bitc')
+ <script src="/public/js/copyToclip.js">
 
-    document.addEventListener("click", (e) => {
-    if (e.target.dataset.short) {
-        const url = `http://localhost:3000/${e.target.dataset.short}`;
-
-        navigator.clipboard
-            .writeText(url)
-            .then(() => {
-                console.log("Text copied to clipboard...");
-            })
-            .catch((err) => {
-                console.log("Something went wrong", err);
-            });
-    }
-});
 </script>
 </body>
 </html>
